--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^4.6.0",
     "devicon": "^2.11.0",
     "emailjs-com": "^2.6.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "8.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
@@ -17,6 +17,9 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "scripts": {
     "start": "react-scripts start",
